--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,7 @@
 	border: 1px solid #000000;
 	font-family: "Courier New", Courier, monospace;
 	font-size: x-large;
+	cursor: move;
 }
 .red{
 	color: red;
@@ -56,3 +57,29 @@
 	color: mediumblue;
 	font-weight: bold;
 }
+
+.card.empty {
+	background-color: #f5f5f5;
+	border: dashed 1px #000000;
+	opacity: 0.6;
+}
+
+[draggable] {
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
+	/* Required to make elements draggable in old WebKit */
+	-khtml-user-drag: element;
+	-webkit-user-drag: element;
+}
+
+/**
+ * Перетаскивание 
+ */
+.card.over {
+	border: 1px dashed #000;
+}
+
+
+
